# pyPAYE

./: README.md  example.py  main.py  pyproject.toml  setup.py  works?.py
payecalculator/: taxation.py
