[tool.poetry]
name = "pyPAYE"
version = "0.1.0"
description = "This is a simple python cscript that calculates PAYE and NI tax payments in the U.K."
authors = ["Vsevolod Mineev <vsevolod.mineev@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
